2004-10-06  Not Zed  <NotZed@Ximian.com>

	* em-folder-tree.c (emft_tree_button_press): remove some debug
	that made it in accidentally.

2004-10-05  Not Zed  <NotZed@Ximian.com>

	* em-folder-tree.c (emft_popup_copy_folder_selected): remove old
	debug which no longer works.

	** See bug #66991 (related to #64377).

	* em-folder-tree.c (em_folder_tree_set_selected): if we get a NULL
	uri or "", just clear the list.
	(emft_tree_button_press): select the new path as well as move the
	cursor there, otherwise emft_tree_user_event clears the selection.

2004-09-30  David Malcolm  <dmalcolm@redhat.com>

	* em-migrate.c (upgrade_passwords_1_2): fix uninitialised pointer.

2004-09-21  Not Zed  <NotZed@Ximian.com>

	** See bug #63521.

	* mail-ops.c (fetch_mail_fetch): delete all the messages on the
	server if we're not in keep on server mode and everything worked.
	uncancel ourselves before saving the cache uid since it could be
	cancelled otherwise.

2004-09-24  Not Zed  <NotZed@Ximian.com>

	** See bug #66706.

	* em-subscribe-editor.c: add a sequence number to EMSubscribe and
	the subscribe_msg structures.  NOOP if the sequence has changed in
	all callbacks.  up the sequence number when we refresh.

2004-09-20  Not Zed  <NotZed@Ximian.com>

	** See bug #65329.

	* em-folder-tree-model.c (emft_is_special_local_folder): added
	helper for finding local folders for translation.
	(em_folder_tree_model_set_folder_info): translate the special
	local folder names.

	* mail-component.c: mark standard folder names for translation.

2004-09-23  Not Zed  <NotZed@Ximian.com>

	** See bug #65058 (again again).

	* em-format-html.c (efh_text_html): calculate our location uri
	ourselves (content id).

	* em-format.c (em_format_add_puri): if we have no content-location
	key, don't fallback to any container's location.

2004-09-23  Not Zed  <NotZed@Ximian.com>

	* em-folder-tree.c (emft_get_folder_info__desc): describe the
	get-folder process.  This also makes it cancellable.
