@@ -890,7 +890,10 @@ forward_non_attached (GPtrArray *messages, int style, const char *fromuri)
 		
 		if (text) {
 			composer = create_new_composer (subject, fromuri);
-			
+
+			if (CAMEL_IS_MULTIPART(camel_medium_get_content_object((CamelMedium *)message)))
+				e_msg_composer_add_message_attachments(composer, message, FALSE);
+
 			e_msg_composer_set_body_text (composer, text, len);
 						
 			e_msg_composer_unset_changed (composer);
